# uart-mcp

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/uart_mcp/: __init__.py  __main__.py  config.py  errors.py  serial_manager.py  server.py  terminal_manager.py  types.py
src/uart_mcp/tools/: __init__.py  data_ops.py  list_ports.py  port_ops.py  terminal.py
tests/: conftest.py  run_all_tests.sh  test_config_management.py  test_errors.py  test_integration_mock.py  test_integration_real_port.py  test_scenario_blacklist_permission.py  test_scenario_hot_reload.py  test_serial_manager.py  test_server_handlers.py  test_terminal_manager.py  test_terminal_tools.py  test_tools.py  test_types.py
